# learn-pypi

./: .gitignore  Makefile  README.md  bashrc  docker-bootstrap.sh  docker-compose.yml  pypirc  requirements-dev.txt  requirements.txt  test.py
auth/: .htaccess
boss_package/: Makefile  pyproject.toml  setup.py
boss_package/tests/: test_boss_package.py
boss_package/travis/: bootstrap.sh  build-wheels-latest.sh  build-wheels-test.sh  build-wheels.sh  setup-pip-conf.sh
bosspackage/: pyproject.toml
pypi/: boss_package-0.1.0-py3-none-any.whl
