[tool.poetry]
name = "boss_package"
version = "0.1.0"
description = "The description of the package"
authors = [
    "Jarvis <jarvis@theblacktonystark.com>"
]
license = "MIT"
readme = 'README.rst'  # Markdown files are supported
repository = "https://github.com/bossjones/boss_package"
homepage = "https://github.com/bossjones/boss_package"
keywords = ['command', 'cli']

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.9"
# Dependencies with extras
requests = { version = "^2.13", extras = [ "security" ] }
# Git dependencies
click = "^7.0"
pyconfig = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
boss_package = 'boss_package=cli:cli'
