[tool.poetry]
name = "boss_package"
version = "0.1.0"
description = "The description of the package"
authors = [
    "Jarvis <jarvis@theblacktonystark.com>"
]
license = "MIT"
readme = 'README.rst'  # Markdown files are supported
homepage = "https://github.com/bossjones/boss_package"
keywords = ['command', 'cli']

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.9"
# Dependencies with extras
requests = { version = "^2.13", extras = [ "security" ] }
# Git dependencies
click = "^7.0"
pyconfig = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
pytest-mock = "^1.7"
pre-commit = "^1.12"
pytest-cov = "^2.6"
tox = "^3.5"
black = {version = "^19.3b0", python = "^3.6"}

[build-system]
requires = ["poetry>=0.12", "setuptools>=40.8.0", "wheel", "setuptools_scm"]
build-backend = "poetry.masonry.api"
# build-backend = 'setuptools.build_meta'

[tool.poetry.scripts]
boss_package = 'boss_package=cli:cli'

[[tool.poetry.source]]
name = "internal"
url = "http://pypi/simple/"


[tool.twine]
sign = "yes"
distributions = "dist/wheel/"
repository = "http://pypi/"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
