[tool.poetry]
name = "bosspackage"
version = "0.1.0"
description = "The description of the package"

license = "MIT"

authors = [
    "Jarvis <jarvis@theblacktonystark.com>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/bossjones/bosspackage"
homepage = "https://github.com/bossjones/bosspackage"

keywords = ['command', 'cli']

# Requirements
[tool.poetry.dependencies]
python = "^3.2"  # Compatible python versions must be declared here
toml = "^0.9"
# Dependencies with extras
requests = { version = "^2.13", extras = [ "security" ] }
# Python specific dependencies with prereleases allowed
pathlib2 = { version = "^2.2", python = "~2.7", allows-prereleases = true }
# Git dependencies
click = "^7.0"
pyconfig = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.scripts]
bosspackage = 'bosspackage:cli:cli'
